code25_all/scala/3542371.txt
scala> Float.floatToI

Float.floatToIntBits
scala> Float.floatToIntBits(2f)
<console>:6: error: value floatToIntBits is not a member of object Float
       Float.floatToIntBits(2f)
             ^

